--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -5,5 +5,20 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=192.168.0.150;Port=5432;Database=postgres;Username=mis_user;Password=docker"
+  },
+
+  "MercuryConnections": {
+    "apiKey": "",
+    "issuerId": "",
+    "serviceId": "mercury-g2b.service",
+    "initiatorLogin": "",
+    "localTransactionId": "a10003",
+    "enterpriseId": "",
+    "apiLogin": "",
+    "apiPassword": ""
   }
 }
