--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -12,13 +12,14 @@
     "PostgreSQL": "Host=192.168.0.150;Port=5432;Database=postgres;Username=mis_user;Password=docker"
   },
 
-
-  "apiKey": "",
-  "issuerId": "",
-  "serviceId": "mercury-g2b.service",
-  "initiatorLogin": "",
-  "localTransactionId": "a10003",
-  "enterpriseId": "",
-  "apiLogin": "",
-  "apiPassword": ""
+  "MercuryConstants": {
+    "ApiKey": "",
+    "IssuerId": "",
+    "ServiceId": "mercury-g2b.service",
+    "InitiatorLogin": "",
+    "LocalTransactionId": "a10003",
+    "EnterpriseId": "",
+    "ApiLogin": "",
+    "ApiPassword": ""
+  }
 }
