Добавлена интеграция с системой Меркурий
- Изменена модель данных отправки запроса на получение списка ВСД
- Добавлена универсальная модель отправки любых запросов в систему Меркурий
- Добавлены универсальные методы отправки запросов в систему Меркурий

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -13,6 +13,7 @@
   },
 
   "MercuryConstants": {
+    "RequestUrl": "https://api.vetrf.ru/platform/services/2.0/ApplicationManagementService",
     "ApiKey": "",
     "IssuerId": "",
     "ServiceId": "mercury-g2b.service",
