--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -1,24 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-
   "ConnectionStrings": {
-    "PostgreSQL": "Host=192.168.1.250;Port=5432;Database=postgres;Username=mis_user;Password=docker"
+    "PostgreSQL": "Host=192.168.0.150;Port=5432;Database=postgres;Username=mis_user;Password=docker"
   },
 
-  "MercuryConnections": {
-    "apiKey": "",
-    "issuerId": "",
-    "serviceId": "mercury-g2b.service",
-    "initiatorLogin": "",
-    "localTransactionId": "a10003",
-    "enterpriseId": "",
-    "apiLogin": "",
-    "apiPassword": ""
+  "MercuryConstants": {
+    "RequestUrl": "https://api.vetrf.ru/platform/services/2.0/ApplicationManagementService",
+    "ApiKey": "",
+    "IssuerId": "",
+    "ServiceId": "mercury-g2b.service",
+    "InitiatorLogin": "",
+    "LocalTransactionId": "a10003",
+    "EnterpriseId": "",
+    "ApiLogin": "",
+    "ApiPassword": ""
   }
 }
