--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -6,21 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "PostgreSQL": "Host=192.168.0.150;Port=5432;Database=postgres;Username=mis_user;Password=docker"
-  },
-
-  "MercuryConstants": {
-    "RequestUrl": "https://api.vetrf.ru/platform/services/2.0/ApplicationManagementService",
-    "ApiKey": "",
-    "IssuerId": "",
-    "ServiceId": "mercury-g2b.service",
-    "InitiatorLogin": "",
-    "LocalTransactionId": "a10003",
-    "EnterpriseId": "",
-    "ApiLogin": "",
-    "ApiPassword": ""
-  }
+  "AllowedHosts": "*"
 }
