--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -3,7 +3,7 @@
     "PostgreSQL": "Host=192.168.0.150;Port=5432;Database=postgres;Username=mis_user;Password=docker"
   },
 
-  "MercuryConstants": {
+  "MercuryOptions": {
     "RequestUrl": "https://api.vetrf.ru/platform/services/2.0/ApplicationManagementService",
     "ApiKey": "",
     "IssuerId": "",
