--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -4,10 +4,10 @@
   },
 
   "MercuryOptions": {
-    "RequestUrl": "https://api.vetrf.ru/platform/services/2.0/ApplicationManagementService",
+    "RequestUrl": "https://api.vetrf.ru/platform/services/2.1/ApplicationManagementService",
     "ApiKey": "",
     "IssuerId": "",
-    "ServiceId": "mercury-g2b.service",
+    "ServiceId": "mercury-g2b.service:2.1",
     "InitiatorLogin": "",
     "LocalTransactionId": "a10003",
     "EnterpriseId": "",
