--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQL": "Host=192.168.0.150;Port=5432;Database=postgres;Username=mis_user;Password=docker"
+    "PostgreSQL": "Host=my.server;Port=5432;Database=postgres;Username=mis_user;Password=docker"
   },
 
   "MercuryOptions": {
