--- a/Presentation/appsettings.Production.json
+++ b/Presentation/appsettings.Production.json
@@ -8,7 +8,7 @@
     },
     
     "ConnectionStrings": {
-        "PostgreSQL": "Host=192.168.0.150;Port=5432;Database=postgres;Username=mis_user;Password=docker"
+        "PostgreSQL": "Host=my.server;Port=5432;Database=postgres;Username=mis_user;Password=docker"
     },
 
     "MercuryOptions": {
