Правки для деплоя на прод.

--- a/Presentation/appsettings.Production.json
+++ b/Presentation/appsettings.Production.json
@@ -9,6 +9,7 @@
     
     "ConnectionStrings": {
         "PostgreSQL": "Host=my.server;Port=5432;Database=postgres;Username=mis_user;Password=docker"
+        //"PostgreSQL": "Host=database;Port=5432;Database=postgres;Username=mis_user;Password=1tsM1sP@sS"
     },
 
     "MercuryOptions": {
