Добавлено сохранение и скачивание шаблонов.

--- a/MercuryIntegrationService/appsettings.Development.json
+++ b/MercuryIntegrationService/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQL": "Host=my.server;Port=5432;Database=postgres;Username=mis_user;Password=docker"
+    "PostgreSQL": "Host=my.server;Port=5432;Database=postgres;Username=mis_user;Password=1tsM1sP@sS"
   },
 
   "MercuryOptions": {
