Добавлена сервис управлением файлами.

--- a/MercuryIntegrationService/appsettings.Development.json
+++ b/MercuryIntegrationService/appsettings.Development.json
@@ -5,5 +5,9 @@
 
   "MercuryOptions": {
     "ServiceId": "mercury-g2b.service:2.1"
+  },
+  
+  "MercuryFileOptions": {
+    "Folder": "D:\\Temp\\mis"
   }
 }
