--- a/MercuryIntegrationService/appsettings.Production.json
+++ b/MercuryIntegrationService/appsettings.Production.json
@@ -6,6 +6,10 @@
   "MercuryOptions": {
     "ServiceId": "mercury-g2b.service:2.1"
   },
+
+  "MercuryFileOptions": {
+    "Folder": "/files"
+  },
   
   "Logging": {
     "LogLevel": {
