--- a/MercuryIntegrationService/appsettings.json
+++ b/MercuryIntegrationService/appsettings.json
@@ -7,5 +7,11 @@
     }
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "RoleOptions": {
+    "Guest": "guest",
+    "Admin": "admin",
+    "Client": "client"
+  }
 }
