Настройки DI инфраструктуры вынесены в опции

--- a/MercuryIntegrationService/appsettings.Production.json
+++ b/MercuryIntegrationService/appsettings.Production.json
@@ -1,6 +1,28 @@
 ﻿{
-  "ConnectionStrings": {
-    "PostgreSQL": "Host=database;Port=5432;Database=postgres;Username=mis_user;Password=1tsM1sP@sS"
+  "MisDbOptions": {
+    "ConnectionString": "Host=database;Port=5432;Database=postgres;Username=mis_user;Password=1tsM1sP@sS",
+    "SchemaName": "mis",
+    "EfMigrationsHistoryTableName": "__MisEFMigrationsHistory",
+    "PostgreSqlVersion": {
+      "Major": 12,
+      "Minor": 6
+    }
+  },
+
+  "IdentityConfigurationOptions": {
+    "Password": {
+      "RequiredLength": 10,
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireNonAlphanumeric": false,
+      "RequireDigit": false
+    },
+    "Cookie": {
+      "HttpOnly": true,
+      "SlidingExpiration": true,
+      "ExpireTimeSpanHoursCount": 10,
+      "Name": "MercuryIntegrationService"
+    }
   },
   
   "MercuryOptions": {
