--- a/MercuryIntegrationService/appsettings.Development.json
+++ b/MercuryIntegrationService/appsettings.Development.json
@@ -1,8 +1,30 @@
 {
-  "ConnectionStrings": {
-    "PostgreSQL": "Host=my.server;Port=5432;Database=postgres;Username=mis_user;Password=1tsM1sP@sS"
+  "MisDbOptions": {
+    "ConnectionString": "Host=my.server;Port=5432;Database=postgres;Username=mis_user;Password=1tsM1sP@sS",
+    "SchemaName": "mis",
+    "EfMigrationsHistoryTableName": "__MisEFMigrationsHistory",
+    "PostgreSqlVersion": {
+      "Major": 12,
+      "Minor": 6
+    }
   },
-
+  
+  "IdentityConfigurationOptions": {
+    "Password": {
+      "RequiredLength": 10,
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireNonAlphanumeric": false,
+      "RequireDigit": false
+    },
+    "Cookie": {
+      "HttpOnly": true,
+      "SlidingExpiration": true,
+      "ExpireTimeSpanHoursCount": 10,
+      "Name": "MercuryIntegrationService"
+    }
+  },
+  
   "MercuryOptions": {
     "ServiceId": "mercury-g2b.service:2.1"
   },
