--- a/MercuryIntegrationService/appsettings.Stage.json
+++ b/MercuryIntegrationService/appsettings.Stage.json
@@ -1,21 +1,43 @@
 ﻿{
-    "ConnectionStrings": {
-        "PostgreSQL": "Host=database;Port=5432;Database=postgres;Username=mis_user;Password=1tsM1sP@sS"
-    },
-
-    "MercuryOptions": {
-        "ServiceId": "mercury-g2b.service:2.1"
-    },
-
-    "MercuryFileOptions": {
-        "Folder": "/files"
-    },
-
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
+  "MisDbOptions": {
+    "ConnectionString": "Host=database;Port=5432;Database=postgres;Username=mis_user;Password=1tsM1sP@sS",
+    "SchemaName": "mis",
+    "EfMigrationsHistoryTableName": "__MisEFMigrationsHistory",
+    "PostgreSqlVersion": {
+      "Major": 12,
+      "Minor": 6
     }
+  },
+
+  "IdentityConfigurationOptions": {
+    "Password": {
+      "RequiredLength": 10,
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireNonAlphanumeric": false,
+      "RequireDigit": false
+    },
+    "Cookie": {
+      "HttpOnly": true,
+      "SlidingExpiration": true,
+      "ExpireTimeSpanHoursCount": 10,
+      "Name": "MercuryIntegrationService"
+    }
+  },
+
+  "MercuryOptions": {
+    "ServiceId": "mercury-g2b.service:2.1"
+  },
+
+  "MercuryFileOptions": {
+    "Folder": "/files"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  }
 }
