--- a/MercuryIntegrationService/appsettings.json
+++ b/MercuryIntegrationService/appsettings.json
@@ -4,6 +4,17 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      },
+      "FormatterName": "Simple",
+      "FormatterOptions": {
+        "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
+      }
     }
   },
 
