--- a/MercuryIntegrationService/appsettings.Production.json
+++ b/MercuryIntegrationService/appsettings.Production.json
@@ -9,6 +9,13 @@
     }
   },
 
+  "HangfireOptions": {
+    "SchemaName": "mis_hangfire",
+    "WorkerCount": 2,
+    "MisServerName": "MIS",
+    "HeartbeatIntervalMinutesCount": 10
+  },
+
   "IdentityConfigurationOptions": {
     "Password": {
       "RequiredLength": 10,
