--- a/MercuryIntegrationService/appsettings.Stage.json
+++ b/MercuryIntegrationService/appsettings.Stage.json
@@ -11,9 +11,10 @@
 
   "HangfireOptions": {
     "SchemaName": "mis_hangfire",
-    "WorkerCount": 2,
+    "WorkerCount": 1,
     "MisServerName": "MIS",
-    "HeartbeatIntervalMinutesCount": 10
+    "HeartbeatIntervalMinutesCount": 10,
+    "CronExpression": "0 1 23 * * *"
   },
 
   "IdentityConfigurationOptions": {
@@ -38,5 +39,10 @@
 
   "MercuryFileOptions": {
     "Folder": "/files"
+  },
+  
+  "LogFolderOptions": {
+    "StoreLogs": true,
+    "Folder": "/logs/mis-{Date}.log"
   }
 }
