--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,45 @@
 version: "3"
 
 services:
-        backend:
+        mis-backend:
                 build: backend/
                 container_name: mis-backend
                 volumes:
                         - "./backend/publish:/app"
+                        - "./files:/files"
+                        - "./logs:/logs"
+                        - "/etc/localtime:/etc/localtime:ro"
+                        - "/etc/timezone:/etc/timezone:ro"
                 ports:
                         - 5001:80
                 environment:
-                        - TZ=Europe/Moscow
-        frontend:
+                        - ASPNETCORE_ENVIRONMENT=Production
+                networks:
+                        - default
+                depends_on:
+                        - database
+        mis-frontend:
                 image: nginx:stable-alpine
                 container_name: mis-frontend
                 volumes:
-                        - web-root:/usr/share/nginx/html:Z
+                        - "./frontend:/usr/share/nginx/html:Z"
                         - "./nginx.conf:/etc/nginx/conf.d/default.conf:ro"
-                        - certbot-etc:/etc/letsencrypt
-                        - certbot-var:/var/lib/letsencrypt
-                        - dhparam:/etc/ssl/certs
+                        - "/etc/localtime:/etc/localtime:ro"
+                        - "/etc/timezone:/etc/timezone:ro"
                 ports:
                         - 80:80
-                        - 443:443
-        sertbot:
-                image: certbot/certbot:latest
-                container_name: sertbot
-                volumes:
-                        - certbot-etc:/etc/letsencrypt
-                        - certbot-var:/var/lib/letsencrypt
-                        - web-root:/var/www/html
+                networks:
+                        - default
                 depends_on:
-                        - frontend
-                command: renew
+                        - mis-backend
         database:
                 image: postgres:alpine
-                container_name: postgres
+                container_name: database
                 volumes:
                         - "./postgres:/var/lib/postgresql/data"
                 ports:
                         - 5432:5432
                 environment:
                         - POSTGRES_PASSWORD=1tsM1sP@sS
-
-volumes:
-        certbot-etc:
-        certbot-var:
-        web-root:
-                driver: local
-                driver_opts:
-                        type: none
-                        device: /home/srv_admin/docker/volumes/mis/frontend/dist
-                        o: bind
-        dhparam:
-                driver: local
-                driver_opts:
-                        type: none
-                        device: /home/srv_admin/docker/volumes/mis/dhparam/
-                        o: bind
+                networks:
+                        - default
