MIS-39 Фикс блоклиста ВСД без ТТН
- Добавлено логгирование ошибки в команде обработке единичного ВСД;
- Удалена команда автогашения ВСД;
- Код команды автогашения перенесён в AutoVsdProcessService;
- Блоклист ВСД изменён на словарь с ключом идентификатором предприятия и значением списка ВСД;
- Переименован метод запуска автогашение в IAutoVsdProcessService;
- Обновлены некоторые пакеты;
- Убраны дублирующие try catch в MercuryService;
- Параметры автогашения вынесены в options;
- Добавлена очистка списков синглтона данных автогашения;

--- a/MercuryIntegrationService/appsettings.Development.json
+++ b/MercuryIntegrationService/appsettings.Development.json
@@ -36,5 +36,19 @@
   "LogFolderOptions": {
     "StoreLogs": false,
     "Folder": ""
+  },
+  
+  "AutoVsdProcessingOptions": {
+    "QuartzOptions": {
+      "SchedulerId": "AutoVsdProcessing",
+      "ThreadPoolMaxConcurrency": 10,
+      "JobTriggerIdentity": "Everyday AutoVsdProcess trigger",
+      "CronSchedule": "0 0 2 * * ?"
+    },
+    "AutoVsdProcessingTimeSpan": {
+      "Seconds": 0,
+      "Minutes": 0,
+      "Hours": 3
+    }
   }
 }
