--- a/MercuryIntegrationService/appsettings.Production.json
+++ b/MercuryIntegrationService/appsettings.Production.json
@@ -36,5 +36,19 @@
   "LogFolderOptions": {
     "StoreLogs": true,
     "Folder": "/logs/mis-{Date}.log"
+  },
+
+  "AutoVsdProcessingOptions": {
+    "QuartzOptions": {
+      "SchedulerId": "AutoVsdProcessing",
+      "ThreadPoolMaxConcurrency": 10,
+      "JobTriggerIdentity": "Everyday AutoVsdProcess trigger",
+      "CronSchedule": "0 0 2 * * ?"
+    },
+    "AutoVsdProcessingTimeSpan": {
+      "Seconds": 0,
+      "Minutes": 0,
+      "Hours": 3
+    }
   }
 }
